feat: JDWP tool UX improvements — synchronous resume, context dump, auto-unbox
Cuts the typical "land at a breakpoint and inspect" flow from ~10 tool calls
down to ~5 by collapsing the most common multi-call sequences into single
calls and removing manual polling.

- jdwp_wait_for_attach: poll until JVM listens, then attach (no manual port-checking)
- jdwp_resume_until_event: blocks on a CountDownLatch in BreakpointTracker until
  the next BP/step/exception, replacing resume + poll get_current_thread
- jdwp_get_breakpoint_context: one-shot dump of thread + frames + locals + `this`
  fields, replacing the four-call get_current_thread/get_stack/get_locals/get_fields chain
- jdwp_assert_expression: eval-and-compare in one shot
- jdwp_reset: clear BPs/watchers/cache/history without dropping the connection
- Auto-unbox primitive wrappers in evaluate_expression so eval order.getTotal()
  returns 71.982 instead of Object#N (java.lang.Double)
- Auto-rewrite bare field references via synthetic _this in the expression evaluator
- Filter JVM/JDK/surefire internal threads from get_threads by default; render
  thread status as RUNNING/WAIT/SLEEPING instead of raw integers
- Collapse junit/maven/reflection noise frames in get_stack (toggle with includeNoise)
- Extract thread helpers into ThreadFormatting

Fix pom argLine to interpolate \${argLine} so -DargLine="..." extends rather than
silently overrides --add-modules jdk.jdi. Update the java-debug skill with Gradle
workflows, the new tools, and revised recipes; refresh the 2026-04-06 test flight
plan to use -Dmaven.surefire.debug. Add the 2026-04-07 UX-improvements plan and
unit tests covering the new behaviour.